--- a/templates/partials/adminHeader.hbs
+++ b/templates/partials/adminHeader.hbs
@@ -414,6 +414,24 @@
                         </a>
                     </li>
                     <li class="menu-main-item">
+                        <a href="/vitco-impex/control/purchase/home" class="menu-link" data-link="purchase">
+                            <i class="bi bi-receipt-cutoff me-3"></i>
+                            <div data-i18n="Basic">Purchase</div>
+                        </a>
+                    </li>
+                    <li class="menu-main-item">
+                        <a href="/vitco-impex/control/production/home" class="menu-link" data-link="production">
+                            <i class="bi bi-graph-up-arrow me-3"></i>
+                            <div data-i18n="Basic">Production</div>
+                        </a>
+                    </li>
+                    <li class="menu-main-item">
+                        <a href="/vitco-impex/control/inventory/home" class="menu-link" data-link="inventory">
+                            <i class="bi bi-box2 me-3"></i>
+                            <div data-i18n="Basic">Inventory</div>
+                        </a>
+                    </li>
+                    <li class="menu-main-item">
                         <a href="/vitco-impex/control/qr-code/view-all" class="menu-link" data-link="qrCode">
                             <i class="bi bi-qr-code me-3"></i>
                             <div data-i18n="Basic">Qr code layouts</div>
@@ -896,6 +914,14 @@
 <script src="/js/admin/ajaxReq.js"></script>
 <script src="/js/admin/sub-admin.js"></script>
 <script src="/js/admin/shortcuts.js"></script>
+{{!-- moment js --}}
+<script src="https://momentjs.com/downloads/moment.js"></script>
+
+{{!-- bootstrap date picker --}}
+<script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+<link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
 {{#> script}}{{/script}}
 
 </html>
